--- a/more.html
+++ b/more.html
@@ -163,8 +163,8 @@
             <span class="tab-bar__title">Friends</span>
         </a>
         <a href="chats.html" class="tab-bar__tab">
-            <i class="fas fa-comment">Chats</i>
-            <span class="tab-bar__title"></span>
+            <i class="fas fa-comment"></i>
+            <span class="tab-bar__title">Chats</span>
         </a>
         <a href="find.html" class="tab-bar__tab">
             <i class="fas fa-search"></i>
