--- a/index.html
+++ b/index.html
@@ -46,26 +46,24 @@
                 <h6 class="friends__section-title">My Profile</h6>
             </header>
             <div class="friends__section-rows">
-                <div class="friends_section-row">
-                    <a href="profile.html">
-                        <img src="images/avatar.jpg" alt="">
-                        <span class="friends__section-name">DevStuki</span>
-                    </a>
+                <div class="friends_section-row">                    
+                    <img src="images/avatar.jpg" alt="">
+                    <a href="profile.html">DevStuki</a>                    
                 </div>
                 <div class="friends_section-row">
-                    <i class="fas fa-info-circle"></i>
-                    <span class="friends__section-name">Friends Names Display</span>
+                    <i class="fas fa-info-circle fa-lg"></i>
+                    <span class="friends__section-info">Friends Names Display</span>
                 </div>
             </div>
         </section>
         <section class="friends__section">
-            <header>
-                <h6 class="friends__section-title"></h6>
+            <header class="friends__section-header">
+                <h6 class="friends__section-title">Friends</h6>
             </header>
             <div class="friends__section-rows">
-                    <div class="friends_section-row">
+                    <div class="friends_section-row with-tagline">
                         <div class="friends__sections-column">
-                            <img src="" alt="">
+                            <img src="images/avatar-poksini.jpg" alt="">
                             <span class="friends__section-name">Poksini</span>                            
                         </div>
                         <span class="friends__section-tagline">
@@ -93,5 +91,8 @@
             <span class="tab-bar__title">More</span>
         </a>
     </nav>
+    <div class="bigScreenText">
+        <span>Please make your screen smaller.</span>
+    </div>
 </body>
 </html>
