--- a/chat.html
+++ b/chat.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Chat</title>
 </head>
-<body>
-    <header class="top-header">
+<body class="body-chat">
+    <header class="top-header chat-header">
         <div class="header__top">
             <div class="header__column">
                 <i class="fas fa-plane"></i>
@@ -57,14 +57,17 @@
         </div>
     </main>
     <div class="type-message">
-        <i class="fas fa-plus fa-2x"></i>
+        <i class="fas fa-plus fa-lg"></i>
         <div class="type-message__input">
             <input type="text">
-            <i class="far fa-grin-squint"></i>
+            <i class="far fa-grin-squint fa-lg"></i>
             <span class="record-message">
-                <i class="fas fa-microphone-alt"></i>
+                <i class="fas fa-microphone-alt fa-lg"></i>
             </span>            
         </div>
+    </div>
+    <div class="bigScreenText">
+        <span>Please make your screen smaller.</span>
     </div>
 </body>
 </html>
