--- a/chats.html
+++ b/chats.html
@@ -48,7 +48,7 @@
                         <img src="images/avatar.jpg" alt="">
                         <div class="chat__preview">
                             <h3 class="chat__user">Poksini</h3>
-                            <span class="chat__list-message">Hello! This is test message</span>
+                            <span class="chat__last-message">Hello! This is test message</span>
                         </div>
                     </div>
                     <span class="chat__date-time">
@@ -62,7 +62,7 @@
                         <img src="images/avatar-kakao.jpg" alt="">
                         <div class="chat__preview">
                             <h3 class="chat__user">KakaoTalk</h3>
-                            <span class="chat__list-message">You logged into KakaoTalk PC</span>
+                            <span class="chat__last-message">You logged into KakaoTalk PC</span>
                         </div>
                     </div>
                     <span class="chat__date-time">
@@ -93,5 +93,8 @@
             <span class="tab-bar__title">More</span>
         </a>
     </nav>
+    <div class="bigScreenText">
+        <span>Please make your screen smaller.</span>
+    </div>
 </body>
 </html>
