--- a/more.html
+++ b/more.html
@@ -136,7 +136,7 @@
                 </div>
             </div>
         </section>
-        <section class="more__options">
+        <section class="more__links">
             <div class="more__option">
                 <img src="images/kakao-story.png" alt="" class="more__options-image">
                 <span class="more__options-title">
@@ -175,5 +175,8 @@
             <span class="tab-bar__title">More</span>
         </a>
     </nav>
+    <div class="bigScreenText">
+        <span>Please make your screen smaller.</span>
+    </div>
 </body>
 </html>
